<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeafFallingWallpaper</string>
    <string name="wallpaper_description">Leaves are falling gently -build2</string>
        
    <string name="wallpaper_settings">Settings</string>
    <string name="category1">Paper Settings</string>
    <string name="category2">Paper recommends</string>
    
	<string name="leaf_number_title">Leaf\'s amount</string>
	<string name="leaf_number_summary">Current amount: normal</string>
	<string name="leaf_number_summary_prefix">Current amount</string>
	<string name="leaf_number_many">many</string>
	<string name="leaf_number_normal">normal</string>
	<string name="leaf_number_few">few</string>
	
	<string name="leaf_falling_speed_title">Leaf\'s speed</string>
	<string name="leaf_falling_speed_summary">current speed: medium</string>
	<string name="leaf_falling_speed_summary_prefix">current speed</string>
	<string name="leaf_speed_fast">fast</string>
	<string name="leaf_speed_medium">medium</string>
	<string name="leaf_speed_slow">slow</string>
	
	<string name="leaf_moving_direction_title">Leaf\'s moving direction</string>
	<string name="leaf_moving_direction_summary">current direction: downward</string>
	<string name="leaf_moving_direction_summary_prefix">current direction</string>
	<string name="leaf_direction_upward">upward</string>
	<string name="leaf_direction_downward">downward</string>
	
	<string name="paper_bg_title">Background</string>
	<string name="paper_bg_summary">current background: background1</string>
	<string name="paper_bg_summary_prefix">current background</string>
	<string name="paper_bg_1">background1</string>
	<string name="paper_bg_2">background2</string>
	<string name="paper_bg_3">background3</string>
	
	<string name="leaf_color_title">Leaf\'s color</string>
	<string name="leaf_color_summary">current color: random</string>
	<string name="leaf_color_summary_prefix">current color</string>
	<string name="leaf_color_random">random</string>
	<string name="leaf_color_red">red</string>
	<string name="leaf_color_blue">blue</string>
	<string name="leaf_color_yellow">yellow</string>
	
	<string name="recommend1_title">Recommend1</string>
	<string name="recommend2_title">Recommend2</string>
	<string name="recommend3_title">Recommend3</string>
	<string name="recommend1_url">market://search?q=pub:\"Ringtone Soundboard\"</string>
	<string name="recommend2_url">http://www.baidu.com</string>
	<string name="recommend3_url">http://google.com</string>
	<string name="paper_share_to">Share to</string>
	<string name="share_title">Share</string>
	<string name="share_text_prefix">share an interesting app for you:</string>
	<string name="share_text_content">http://android.1717app.com/2.html</string>

    <string name="AdMogo_USER_ID">3a9dd8eb23b84f5db803f968f53f3635</string>
    <string name="AdMogo_USER_ID2">40b158bf3bef40cfba79b6977b05266a</string>
</resources>